# schema

./: Cargo.toml  README.md
.github/workflows/: rust.yml
schema/: Cargo.toml
schema-derive/: Cargo.toml
schema-derive/src/: basic_types.rs  lib.rs  macros.rs  syn_types.rs  tokens.rs
schema-test/: Cargo.toml
schema-test/src/: main.rs
schema-test/test_output/: enum.out  fancy_struct.out  struct.out  union.out
schema/src/: lib.rs
