[workspace]
members = ["schema", "schema-derive", "schema-test" ]
default-members = ["schema", "schema-derive", "schema-test" ]
resolver = "3"

[workspace.dependencies]
schema = { version = "0.2.1", path = "schema" }
schema-derive = { version = "0.2.1", path = "schema-derive" }

expectorate = "1.0.3"
paste = "1.0.5"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "3.0.2"
