[package]
name = "schema-derive"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
description = "derive macro for the schema crate"
repository = "https://github.com/ahl/schema"
readme = "../README.md"
keywords = ["macro", "schema", "reflection"]
categories = ["development-tools::procedural-macro-helpers",
              "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["derive", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
paste = "1.0.5"
