[package]
name = "schema-derive"
version = "0.1.0"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
description = "derive macro for the schema crate"
repository = "https://github.com/ahl/schema"
readme = "../README.md"
keywords = ["macro", "schema", "reflection"]
categories = ["development-tools::procedural-macro-helpers",
              "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.2", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
paste = "1.0.5"
