[package]
name = "schema-derive"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "derive macro for the schema crate"
repository = "https://github.com/ahl/schema"
readme = "../README.md"
keywords = ["macro", "schema", "reflection"]
categories = ["development-tools::procedural-macro-helpers",
              "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits"] }
