[package]
name = "schema-test"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "tests for the schema crate"
repository = "https://github.com/ahl/schema"
readme = "../README.md"
keywords = ["macro", "schema", "reflection"]
categories = ["development-tools::procedural-macro-helpers",
              "development-tools::testing"]

[dependencies]
schema = { workspace = true }
expectorate = { workspace = true }
