[package]
name = "schema"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Access the schema for a Rust item"
repository = "https://github.com/ahl/schema"
readme = "../README.md"
keywords = ["macro", "schema", "reflection"]
categories = ["development-tools::procedural-macro-helpers",
              "development-tools::testing"]

[dependencies]
syn = { workspace = true }
schema-derive = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
